--- a/Hangman/Resources/layout/activity_main.axml
+++ b/Hangman/Resources/layout/activity_main.axml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+  <!--first Liner layout start-->
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -6,13 +7,15 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="#ffdE01">
-    <LinearLayout
+    android:background="#ffdE01"><!--background color -->
+
+    
+    <LinearLayout  
         android:orientation="vertical" 
         android:layout_width="401.1dp"
         android:layout_height="310.5dp"
         android:id="@+id/linearLayout1">
-       <!--<//hi>>-->
+   <!--Second linear layout start -->
         <LinearLayout
             android:orientation="horizontal"
             android:minWidth="25px"
@@ -20,13 +23,16 @@
             android:layout_width="match_parent"
             android:layout_height="73.5dp"
             android:id="@+id/linearLayout2">
+            <!--Edit text field where user can insert their name and play game and also add in database-->
             <EditText
-                android:hint="Enter Name or Select Player "
+                android:hint="Enter Name or Select Player"
                 android:id="@+id/txtName"
                 android:inputType="textPersonName"
                 android:layout_width="248.0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="80" />
+
+             <!--New player Button for adding new player  -->
             <Button
                 android:text="New Player"
                 android:layout_width="137.5dp"
@@ -37,9 +43,9 @@
                 android:textColor="#ff000000"
                 style="?android:attr/borderlessButtonStyle"
                 android:textStyle="bold"
-               
-                android:typeface="sans" />
+               android:typeface="sans" />
         </LinearLayout>
+         <!--third linear layout start -->
         <LinearLayout
             android:orientation="vertical"
             android:layout_width="match_parent"
@@ -47,6 +53,8 @@
             android:id="@+id/linearLayout3"
             android:layout_marginTop="20dp"
             android:gravity="center">
+            <!--Check box for some diff levels if someone tick one of them they can play game according their selection  -->
+             <!--Check box for normal level game  -->
             <CheckBox
                 android:text="Normal"
                 android:id="@+id/cbxEasy"
@@ -58,6 +66,7 @@
                 android:textSize="25dp"
                 android:textStyle="bold"
                 app:buttonTint="#ff000000" />
+            <!--Check box for medium level game  -->
             <CheckBox
                 android:text="Regular"
                 android:layout_width="183.0dp"
@@ -69,6 +78,7 @@
                 android:textColor="#ff000000"
                 android:textSize="25dp"
                 app:buttonTint="#ff000000" />
+            <!--Check box for Expert  level game  -->
             <CheckBox
                 android:text="Expert"
                 android:layout_width="156.0dp"
@@ -81,6 +91,8 @@
                 android:textStyle="bold"
                 app:buttonTint="#ff000000" />
         </LinearLayout>
+          <!--third linear layout end   -->
+        <!-- STart game button for start hangman game  -->
         <Button
             android:text="Start Game"
             android:layout_width="wrap_content"
@@ -96,14 +108,11 @@
             android:backgroundTint="#ff1b5e20"
             android:typeface="sans"
             android:radius="20dp"
-          
-    
-	 
+       
 		/>
 
-
-
     </LinearLayout>
+      <!--Second linear layout end   -->
    <ListView
             android:minWidth="25px"
             android:minHeight="25px"
@@ -112,3 +121,4 @@
             android:id="@+id/listView1"
           android:background="#ffdE01" />
 </LinearLayout>
+  <!--first linear layout end   -->
