--- a/Hangman/Resources/layout/activity_main.axml
+++ b/Hangman/Resources/layout/activity_main.axml
@@ -7,7 +7,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="#ffdE01"><!--background color -->
+    android:background="#ffEA01"><!--background color -->
 
     
     <LinearLayout  
@@ -39,11 +39,14 @@
                 android:layout_height="match_parent"
                 android:id="@+id/btnAdd"
                 android:layout_weight="20"
-                android:background="#ffff6d00"
-                android:textColor="#ff000000"
+                
+                android:background="#ff536dfe"
+                android:textColor="@color/fore"
                 style="?android:attr/borderlessButtonStyle"
                 android:textStyle="bold"
-               android:typeface="sans" />
+                android:typeface="sans"
+                android:layout_marginBottom="0.0dp"
+                android:layout_marginTop="0.0dp" />
         </LinearLayout>
          <!--third linear layout start -->
         <LinearLayout
@@ -68,7 +71,7 @@
                 app:buttonTint="#ff000000" />
             <!--Check box for medium level game  -->
             <CheckBox
-                android:text="Regular"
+                android:text="Medium"
                 android:layout_width="183.0dp"
                 android:layout_height="wrap_content"
                 android:id="@+id/cbxNormal"
@@ -100,12 +103,12 @@
             android:id="@+id/btnPlay"
             android:textSize="30dip"
             android:layout_gravity="center"
-            android:background="#ff00c853"
+            android:background="#ff536dfe"
             android:textColor="@color/fore"
             android:layout_marginTop="30dp"
             android:padding="10dp"
             android:textStyle="bold"
-            android:backgroundTint="#ff1b5e20"
+            android:backgroundTint="#ff2979ff"
             android:typeface="sans"
             android:radius="20dp"
        
@@ -119,6 +122,6 @@
             android:layout_width="match_parent"
             android:layout_height="335.5dp"
             android:id="@+id/listView1"
-          android:background="#ffdE01" />
+          android:background="#ffEA01" />
 </LinearLayout>
   <!--first linear layout end   -->
